# analytics-api

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.MD  Dockerfile  README.md  apprunner.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.py  template.yaml
docs/: insomnia_rest.yaml
events/: sqs_put_s3.json
localstack/ready.d/: setup.sh
src/: conf.py
src/api/: exceptions.py  main.py
src/api/schemas/: __init__.py  requests.py  responses.py
src/commands/: __init__.py  bus.py  handlers.py
src/commands/pandas/: __init__.py  command.py  handlers.py
src/commands/s3/: __init__.py  command.py  handler.py
src/database/: postgres.py
src/lambdas/: import_csv_lambda.py
src/models/: __init__.py  program_prediction.py
terraform/: 02-variables.tf  03-s3.tf  04-sns.tf  05-sqs.tf  06-iam.tf  07-wiring.tf  08-outputs.tf
tests/: conftest.py
tests/unit/: test_s3_handlers.py
tests/unit/api/: test_api.py
tests/unit/database/: test_db_calls.py
tests/unit/lambdas/: test_lambda_actions.py  test_s3_handlers.py  test_s3_lambda.py
