[project]
name = "analytics-api"
version = "0.1.0"
description = "Analytics project using serverless and async Python."
authors = [
    {name = "Eduardo Rezaghi",email = "eduardo.rezaghi@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "sqlalchemy[asyncio]",
    "pydantic",
    "httpx",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "boto3[crt] (>=1.38.23,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "psycopg-binary (>=3.2.9,<4.0.0)",
    "psycopg (>=3.2.9,<4.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-cov = "^6.1.1"
ruff = "^0.11.11"
mypy = "^1.15.0"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
addopts = "-v --tb=short -p no:warnings"
testpaths = [
    "tests",
]

[tool.pyright]
typeCheckingMode = "off"
ignore = ["*"]

[tool.ruff]
line-length = 88
exclude = ["tests/*", "examples/*", ".aws-sam", ".venv"]

[tool.ruff.lint]
ignore = [
    "E501",  # Line too long
    "F401",  # Module imported but unused
    "F841",  # Local variable is assigned to but never used
    "F403",  # 'from module import *' used; unable to detect undefined names
    "F405",  # Name may be undefined, or defined from star imports: module
    "E722",  # Do not use bare except
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
